Added message sending feature and modified chat displays

--- a/index.html
+++ b/index.html
@@ -209,12 +209,12 @@
 									<div class="fullHeight col m10 l10">
 										<div class="" id="latestPingSectionOne">
 											<div class="col m6 l6 fullHeight">
-												<div class="latestPinger" id="latestPingerName">Wendy Flores</div>
-												<div class="latestPinger" id="latestPingerClinicNo">ST053108</div>
-												<div class="latestPinger" id="latestPingerTime">10:52AM</div>
+												<div class="latestPinger" id="latestPingerName"><!-- Wendy Flores --></div>
+												<div class="latestPinger" id="latestPingerClinicNo"><!-- ST053108 --></div>
+												<div class="latestPinger" id="latestPingerTime"><!-- 10:52AM --></div>
 											</div>
-											<div class="col m6 l6 fullHeight displayFlex">
-												<div class="displayFlex" id="startChatBtn">
+											<div class="col m6 l6 fullHeight displayFlex" id="pingReplyButtons">
+												<div class="displayFlex startChat" id="startChatBtn">
 													Chat
 													<img src="./css/icons/chat.svg" style="padding-left: 1em;">
 												</div>
@@ -226,7 +226,7 @@
 										</div>
 										<div class="displayFlexColumn" id="latestPingSectionTwo">
 											<div class="" id="latestPingMessage">
-												Hello there, I have a problem sleeping at night. Lastnight, I had problem with my stomach and it disturbed me overnight. I’m scared I have a problem with my stomach and I’m really worried. Looking forward to hearing from you. Regards
+												<!-- Hello there, I have a problem sleeping at night. Lastnight, I had problem with my stomach and it disturbed me overnight. I’m scared I have a problem with my stomach and I’m really worried. Looking forward to hearing from you. Regards -->
 											</div>
 											<div class="" id="latestPingMessageOverlay"></div>
 										</div>
@@ -426,7 +426,7 @@
 					<div class="halfHeight" id="chatUserClinic">ST053108</div>
 				</div>
 				<div class="col m3 l3 fullHeight" id="chatBox">
-					<div class="displayFlex">
+					<div class="displayFlex" id="chatVideoCall">
 						<img src="./css/icons/video_call_blue.svg" alt="Video Icon here">
 					</div>
 					<div class="displayFlex" id="closeChat">
@@ -507,7 +507,7 @@
 				</div>
 			</div>
 			<div class="displayFlex" id="videoCallButtonsBody">
-				<div class="videoCallButtons displayFlex waves-effect waves-light">
+				<div class="videoCallButtons displayFlex waves-effect waves-light startChat">
 					<img src="./images/vidCallChat.png" alt="Video call chat Icon">
 				</div>
 				<div class="videoCallButtons cancel displayFlex waves-effect waves-light" id="videoCallEndBtn">
