Made chat name display

--- a/index.html
+++ b/index.html
@@ -419,7 +419,7 @@
 		<div class="z-depth-1" id="chatBodyContainer">
 			<div class="" id="chatBodyHead">
 				<div class="col m1 l1 fullHeight displayFlexLeft">
-					<img src="./images/profile2.jpg" class="studentsSectionImages" alt="Chat user Image here">
+					<img src="./images/profile2.jpg" id="chatUserImage" class="studentsSectionImages" alt="Chat user Image here">
 				</div>
 				<div class="col m7 l7 fullHeight padL" style="margin-left: .5em; margin-right: 2.2em;">
 					<div class="halfHeight" id="chatUserName">Arlene Cooper</div>
