Made the chat work properly

--- a/index.html
+++ b/index.html
@@ -435,7 +435,8 @@
 				</div>
 			</div>
 			<div class="" id="chatBody">
-				<div class="receivedMessage row">
+				<div class="displayFlex grey-text padTop" id="chatStart">-------- New chat started with --------</div>
+				<!-- <div class="receivedMessage row">
 					<div class="col m2 l2 displayFlex">
 						<img src="./images/profile4.jpeg" class="studentsSectionImages" alt="Chat user Image here">
 					</div>
@@ -464,7 +465,7 @@
 					<div class="sentMessageBody">
 						Take lots and lots of water, some pain killers and most Importantly, have a lot of rest.
 					</div>
-				</div>	
+				</div> -->	
 			</div>
 			<div class="chatReplyBody">
 				<input type="text" class="browser-default" placeholder="Type a message...." id="chatReplyText">
