Removed the Demo student

--- a/public/index.html
+++ b/public/index.html
@@ -312,7 +312,7 @@
 							</div>
 							<div class="" id="studentSectionsBody">
 								<div id="studentsSections">
-									<div class="studentSectionDiv">
+									<!-- <div class="studentSectionDiv">
 										<div class="col m2 l2 fullHeight displayFlex">
 											<img src="./images/profile2.jpg" class="studentsSectionImages">
 										</div>
@@ -324,7 +324,7 @@
 											<div class="halfHeight studentsSectionClinicNo">ST054182</div>
 											<div class="halfHeight studentsSectionLevel">200L</div>
 										</div>
-									</div>
+									</div> -->
 								</div>
 								<!-- Loader -->
 								<div class="displayFlexColumn" id="studentsLoaderBody">
